--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,4 @@
+<!-- card-2 -->
 <div class="hero  ">
   <div class="hero-content flex-col lg:flex-row-reverse">
     <div class="text-center lg:text-left pb-3.5">
