--- a/index.html
+++ b/index.html
@@ -69,6 +69,53 @@
       </div>
     </div>
     <!-- card-2 -->
+<div class="hero  ">
+  <div class="hero-content flex-col lg:flex-row-reverse">
+    <div class="text-center lg:text-left pb-3.5">
+     <div class="flex border-2 solid w-[144px] gap-3.5 rounded ">
+      <img src="./assets/coin.png" alt="">
+      <button id="total-donate">00</button>
+     </div>
+      <h1 class="text-xl font-bold pt-6">Donate for Flood Relief in Feni,Bangladesh</h1>
+      <p class="py-6">
+        Many districts in Bangladesh have been underwater. This flood is gradually damaging Feni, Noakhali, Cumilla, Sylhet, and many other surrounding areas. Millions of people are suffering from this unexpected situation
+      </p>
+      <div style="padding-bottom: 20px;">
+        <input  id="donation-amount" type="" placeholder="write the donate amount" class="input input-bordered w-full  " required />
+
+      </div>
+      
+      <button id="donate-button" class="btn w-full font-semibold bg-lime-300 ">Donate Now</button>
+    </div>
+    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+      <img class="w-[522px] h-[390px]" src="./assets/feni.png" alt="">
+    </div>
+  </div>
+</div>
+<!-- card-3 -->
+<div class="hero  ">
+  <div class="hero-content flex-col lg:flex-row-reverse">
+    <div class="text-center lg:text-left pb-3.5">
+     <div class="flex border-2 solid w-[144px] gap-3.5 rounded ">
+      <img src="./assets/coin.png" alt="">
+      <button id="total-donate3">00</button>
+     </div>
+      <h1 class="text-xl font-bold pt-6">Aid for Injured in the Quota Movement</h1>
+      <p class="py-6">
+        The mass uprising in July-August has brought us freedom from an oppressive regime but at a huge cost, as evidenced by the sufferings of those who lost their loved ones and those who are still languishing in hospitals with irreparable injuries for over a month
+      </p>
+      <div style="padding-bottom: 20px;">
+        <input  id="donation-amount" type="" placeholder="write the donate amount" class="input input-bordered w-full  " required />
+
+      </div>
+      
+      <button id="donate-button" class="btn w-full font-semibold bg-lime-300 ">Donate Now</button>
+    </div>
+    <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+      <img class="w-[522px] h-[390px]" src="./assets/quota-protest.png" alt="">
+    </div>
+  </div>
+</div>
   
     <script src="./js/donation.js"></script>
     <!-- <script src="./js/test.js"></script> -->
